refactor(activities-server): revisión y mejoras en carpeta exceptions
- Se refactorizó ExceptionHandlerGlobal.java para mejorar la legibilidad, organización y manejo de errores.
- Se conservará APIErrorEntity.java temporalmente, sujeto a revisión final.
- Se refactorizaron las excepciones personalizadas BadRequestException, InternalServerErrorException y ResourceNotFoundException:
  - Uso correcto y limpio de la anotación @ResponseStatus.
  - Mensaje por defecto agregado en los constructores vacíos.
  - Eliminación de redundancias y mejora en estilo de codificación.